--- a/index.html
+++ b/index.html
@@ -164,8 +164,6 @@
                 <p class="position" lang="en">
                     Product designer
                 </p>
-                </div>
-                <div class="social-networks">
                     <ul class="networks-list list">
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
@@ -207,8 +205,6 @@
                 <p class="position" lang="en">
                     Frontend developer
                 </p>
-                </div>
-                <div class="social-networks">
                     <ul class="networks-list list">
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
@@ -250,8 +246,6 @@
                 <p class="position" lang="en">
                     Marketing
                 </p>
-                </div>
-                <div class="social-networks">
                     <ul class="networks-list list">
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
@@ -293,8 +287,6 @@
                 <p class="position" lang="en">
                     UI Designer
                 </p>
-                </div>
-                <div class="social-networks">
                     <ul class="networks-list list">
                         <li class="networks-item">
                             <a class="networks-link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
@@ -332,9 +324,9 @@
     </section>
     <section class="costumers">
         <div class="container">
-            <p class="regular-costumers">
+            <h2 class="regular-costumers">
                 Постоянные клиенты
-            </p>
+            </h2>
             <ul class="costumers-list list">
                 <li class="costumer-item">
                     <a href="" class="costumer-link">
